# Olympus

./: .dockerignore  .env.example  .gitignore  .roomodes  Dockerfile  ORCH_CHANGELOG.md  README.md  docker-compose.yml  main.py  package-lock.json  requirements.txt  user_facts.json  verify_orch_structure.py
.agent/: phase1_1_smart_router.patch  test_smart_router_orchestrator.py.txt
.clinerules/: mami-ai.md
alembic/: env.py  script.py.mako
app/: config.py  main.py
core_v2/: main.py
docker/: Dockerfile  LOGGING_MONITORING_SETUP.md  alert_rules.yml  docker-compose.yml  prometheus.yml
docs/: 1upgrade_plan.md  ARCHITECTURE.md  KNOWN_ISSUES.md  (+34 more)
sandbox_router/: __init__.py  api.py  budget_tracker.py  circuit_breaker.py  config.py  dag_executor.py  generator.py  key_manager.py  observer.py  orchestrator.py  prompts.py  pyproject.toml  quality.py  rdr.py  safety.py  scheduler.py  schemas.py  style_injector.py  synthesizer.py  task_spec.py  time_context.py  vision_engine.py  wrangler.toml
sandbox_router/benchmark/: arena.py  judge.py  store.py  test_greeting_hallucination.py  test_v2_integration.py
sandbox_router/memory/: __init__.py  buffer.py  context.py  extractor.py  neo4j_manager.py  session.py  state.py
sandbox_router/tests/: test_heartbeat.py  test_neo4j_resilience.py
sandbox_router/tools/: base.py  registry.py
sandbox_router/tools/definitions/: flux_tool.json  mock_weather.json  search_tool.json
sandbox_router/tools/handlers/: flux_tool.py  mock_weather.py  search_tool.py
sandbox_router/ui/: app.js  arena.html  arena.js  index.html  styles.css
(+555 files in other folders)
