[project]
name = "atlas-sandbox-worker"
version = "1.0.0"
description = "ATLAS AI Sandbox Router - Cloudflare Workers Deployment"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sandbox_router"]

[dependency-groups]
dev = [
    "workers-py",
]
